# Mall-Costumer-ML

./: .gitignore  Makefile  README.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: config.md  getting-started.md  index.md  project-structure.md
docs/docs/api/: config.md  dataset.md  features.md  predict.md  train.md
docs/docs/pipeline/: dataset.md  features.md  predict.md  train.md
ds/: __init__.py  dataset.py  features.py  plots.py  util.py
ds/modeling/: predict.py  train.py
models/: model.pkl
notebooks/: 1-exploration.ipynb
src/: config.py  dataset.py  features.py  plots.py  util.py
src/modeling/: predict.py  train.py
tests/: test_data.py
